[package]
name = "observer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Packet capture analytics for cache traffic latency and throughput"

[dependencies]
# Protocol parsing
protocol-resp = { workspace = true }
protocol-memcache = { workspace = true, features = ["full"] }

# Metrics
metrics = { workspace = true }
metriken = { workspace = true }

# Time
clocksource = { workspace = true }

# CLI and config
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

# Utilities
ahash = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Packet capture
pcap = "2"

# Signal handling (termination feature enables SIGTERM handling on Unix)
ctrlc = { version = "3", features = ["termination"] }

[[bin]]
name = "crucible-observer"
path = "src/main.rs"
